--- a/aula-02-03.html
+++ b/aula-02-03.html
@@ -11,7 +11,18 @@
 <body>
     <div id="app">
         <h1>{{ title }}</h1>
-        <p v-if="status"> Status: verdadeiro </p>
+        <p> A diferença entre o <b>v-show</b> e o <b>v-if</b> é que o primeiro altera o que aparece na tela e o segundo altera o que aparece no código. </p>
+
+        <div v-if="user.id != 0">
+            <h2>Exemplo</h2>
+            <b>Nome: </b> {{user.name}} <br>
+            <b>Identificador: </b> {{user.id}} <br>
+            <b>Profissão: </b> {{user.job}} <br>
+
+            <div id="age" v-show="user.showAge">
+                <b>Idade: </b> {{user.age}} <br>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
@@ -20,7 +31,13 @@
             el: "#app",
             data: {
                 title: "Aula 01 - Vue.js",
-                status: false
+                user: {
+                    id: 1,
+                    showAge: false,
+                    name: "Amanda",
+                    job: "Atriz",
+                    age: 25,
+                }
             }
         });
     </script>
