Alterando estilo do index

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <h2><a href="https://youtube.com/playlist?list=PLcoYAcR89n-qq1vGRbaUiV6Q9puy0qigW">Link para a playlist</a></h2>
     <h2>Exercícios:</h2>
     <ul>
-        <li><a href="aula-01.html">Aula 01 - Introdução</a></li>
-        <li><a href="aula-02-03.html">Aulas 02 e 03 - Diretivas</a></li>
+        <li><a href="aula-01.html">Aula 01 (Introdução)</a></li>
+        <li><a href="aula-02-03.html">Aulas 02 e 03 (V-if e V-show)</a></li>
+        <li><a href="aula-04.html">Aulas 02 e 03 (V-for)</a></li>
     </ul>
 </body>
 
