--- a/aula-02-03.html
+++ b/aula-02-03.html
@@ -30,7 +30,7 @@
         const app = new Vue({
             el: "#app",
             data: {
-                title: "Aula 01 - Vue.js",
+                title: "Aulas 02 e 03 - Vue.js",
                 user: {
                     id: 1,
                     showAge: false,
