--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <ul>
         <li><a href="aula-01.html">Aula 01 (Introdução)</a></li>
         <li><a href="aula-02-03.html">Aulas 02 e 03 (V-if e V-show)</a></li>
-        <li><a href="aula-04.html">Aulas 02 e 03 (V-for)</a></li>
+        <li><a href="aula-04.html">Aula 04 (V-for)</a></li>
+        <li><a href="aula-04.html">Aula 05 (V-model)</a></li>
     </ul>
 </body>
 
