Aula 06 - Diretivas (v-bind)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <li><a href="aula-01.html">Aula 01 (Introdução)</a></li>
         <li><a href="aula-02-03.html">Aulas 02 e 03 (V-if e V-show)</a></li>
         <li><a href="aula-04.html">Aula 04 (V-for)</a></li>
-        <li><a href="aula-04.html">Aula 05 (V-model)</a></li>
+        <li><a href="aula-05.html">Aula 05 (V-model)</a></li>
+        <li><a href="aula-06.html">Aula 06 (V-bind)</a></li>
     </ul>
 </body>
 
