--- a/index.html
+++ b/index.html
@@ -6,19 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso Vue.js</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
-    <h1>Curso Vue.js</h1>
-    <h2><a href="https://youtube.com/playlist?list=PLcoYAcR89n-qq1vGRbaUiV6Q9puy0qigW">Link para a playlist</a></h2>
-    <h2>Exercícios:</h2>
-    <ul>
-        <li><a href="aula-01.html">Aula 01 (Introdução)</a></li>
-        <li><a href="aula-02-03.html">Aulas 02 e 03 (V-if e V-show)</a></li>
-        <li><a href="aula-04.html">Aula 04 (V-for)</a></li>
-        <li><a href="aula-05.html">Aula 05 (V-model)</a></li>
-        <li><a href="aula-06.html">Aula 06 (V-bind)</a></li>
-    </ul>
+    <div class="container">
+        <h1>Curso Vue.js</h1>
+        <h2><a href="https://youtube.com/playlist?list=PLcoYAcR89n-qq1vGRbaUiV6Q9puy0qigW">Link para a playlist</a></h2>
+        <h2>Exercícios:</h2>
+        <ul>
+            <li><a href="aula-01.html">Aula 01 (Introdução)</a></li>
+            <li><a href="aula-02-03.html">Aulas 02 e 03 (V-if e V-show)</a></li>
+            <li><a href="aula-04.html">Aula 04 (V-for)</a></li>
+            <li><a href="aula-05.html">Aula 05 (V-model)</a></li>
+            <li><a href="aula-06.html">Aula 06 (V-bind)</a></li>
+            <li><a href="aula-07.html">Aula 07 (V-bind)</a></li>
+        </ul>
+    </div>
 </body>
 
 </html>
