Aula 08 - Diretivas (v-on)

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="aula-05.html">Aula 05 (V-model)</a></li>
             <li><a href="aula-06.html">Aula 06 (V-bind)</a></li>
             <li><a href="aula-07.html">Aula 07 (V-bind)</a></li>
+            <li><a href="aula-08.html">Aula 08 (V-on)</a></li>
         </ul>
     </div>
 </body>
