Aula 09 - Filtros e manipulação de texto

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="aula-06.html">Aula 06 (V-bind)</a></li>
             <li><a href="aula-07.html">Aula 07 (V-bind)</a></li>
             <li><a href="aula-08.html">Aula 08 (V-on)</a></li>
+            <li><a href="aula-09.html">Aula 09 (Filtros e manipulação de texto)</a></li>
         </ul>
     </div>
 </body>
