--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="aula-07.html">Aula 07 (V-bind)</a></li>
             <li><a href="aula-08.html">Aula 08 (V-on)</a></li>
             <li><a href="aula-09.html">Aula 09 (Filtros e manipulação de texto)</a></li>
+            <li><a href="aula-10.html">Aula 10 (Computed e Watch)</a></li>
         </ul>
     </div>
 </body>
