--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="aula-08.html">Aula 08 (V-on)</a></li>
             <li><a href="aula-09.html">Aula 09 (Filtros e manipulação de texto)</a></li>
             <li><a href="aula-10.html">Aula 10 (Computed e Watch)</a></li>
+            <li><a href="aula-11.html">Aula 11 (Lifecycle hooks)</a></li>
         </ul>
     </div>
 </body>
