--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="aula-10.html">Aula 10 (Computed e Watch)</a></li>
             <li><a href="aula-11.html">Aula 11 (Lifecycle hooks)</a></li>
             <li><a href="aula-12.html">Aula 12 (Componentes reutilizáveis)</a></li>
+            <li><a href="aula-13.html">Aula 13 (Componentes pais e filhos)</a></li>
         </ul>
     </div>
 </body>
