Aula 13 - Componentes, dados e informações

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="aula-11.html">Aula 11 (Lifecycle hooks)</a></li>
             <li><a href="aula-12.html">Aula 12 (Componentes reutilizáveis)</a></li>
             <li><a href="aula-13.html">Aula 13 (Componentes pais e filhos)</a></li>
+            <li><a href="aula-14.html">Aula 13 (Componentes, dados e informações)</a></li>
         </ul>
     </div>
 </body>
