--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <li><a href="aula-12.html">Aula 12 (Componentes reutilizáveis)</a></li>
             <li><a href="aula-13.html">Aula 13 (Componentes pais e filhos)</a></li>
             <li><a href="aula-14.html">Aula 14 (Componentes, dados e informações)</a></li>
-            <li><a href="aula-15.html">Aula 15 (Componentes, dados e informações)</a></li>
+            <li><a href="aula-15.html">Aula 15 (Componentes, dados e informações pt. 2)</a></li>
+            <li><a href="aula-16.html">Aula 16 (Slots)</a></li>
         </ul>
     </div>
 </body>
