--- a/index.html
+++ b/index.html
@@ -13,24 +13,25 @@
 <body>
     <div class="container">
         <h1>Curso Vue.js</h1>
-        <h2><a href="https://youtube.com/playlist?list=PLcoYAcR89n-qq1vGRbaUiV6Q9puy0qigW">Link para a playlist</a></h2>
+        <h2><a target="_blank" href="https://youtube.com/playlist?list=PLcoYAcR89n-qq1vGRbaUiV6Q9puy0qigW">Link para a playlist</a></h2>
         <h2>Exercícios:</h2>
         <ul>
-            <li><a href="aula-01.html">Aula 01 (Introdução)</a></li>
-            <li><a href="aula-02-03.html">Aulas 02 e 03 (V-if e V-show)</a></li>
-            <li><a href="aula-04.html">Aula 04 (V-for)</a></li>
-            <li><a href="aula-05.html">Aula 05 (V-model)</a></li>
-            <li><a href="aula-06.html">Aula 06 (V-bind)</a></li>
-            <li><a href="aula-07.html">Aula 07 (V-bind)</a></li>
-            <li><a href="aula-08.html">Aula 08 (V-on)</a></li>
-            <li><a href="aula-09.html">Aula 09 (Filtros e manipulação de texto)</a></li>
-            <li><a href="aula-10.html">Aula 10 (Computed e Watch)</a></li>
-            <li><a href="aula-11.html">Aula 11 (Lifecycle hooks)</a></li>
-            <li><a href="aula-12.html">Aula 12 (Componentes reutilizáveis)</a></li>
-            <li><a href="aula-13.html">Aula 13 (Componentes pais e filhos)</a></li>
-            <li><a href="aula-14.html">Aula 14 (Componentes, dados e informações)</a></li>
-            <li><a href="aula-15.html">Aula 15 (Componentes, dados e informações pt. 2)</a></li>
-            <li><a href="aula-16.html">Aula 16 (Slots)</a></li>
+            <li><a target="_blank" href="aula-01.html">Aula 01 (Introdução)</a></li>
+            <li><a target="_blank" href="aula-02-03.html">Aulas 02 e 03 (V-if e V-show)</a></li>
+            <li><a target="_blank" href="aula-04.html">Aula 04 (V-for)</a></li>
+            <li><a target="_blank" href="aula-05.html">Aula 05 (V-model)</a></li>
+            <li><a target="_blank" href="aula-06.html">Aula 06 (V-bind)</a></li>
+            <li><a target="_blank" href="aula-07.html">Aula 07 (V-bind)</a></li>
+            <li><a target="_blank" href="aula-08.html">Aula 08 (V-on)</a></li>
+            <li><a target="_blank" href="aula-09.html">Aula 09 (Filtros e manipulação de texto)</a></li>
+            <li><a target="_blank" href="aula-10.html">Aula 10 (Computed e Watch)</a></li>
+            <li><a target="_blank" href="aula-11.html">Aula 11 (Lifecycle hooks)</a></li>
+            <li><a target="_blank" href="aula-12.html">Aula 12 (Componentes reutilizáveis)</a></li>
+            <li><a target="_blank" href="aula-13.html">Aula 13 (Componentes pais e filhos)</a></li>
+            <li><a target="_blank" href="aula-14.html">Aula 14 (Componentes, dados e informações)</a></li>
+            <li><a target="_blank" href="aula-15.html">Aula 15 (Componentes, dados e informações pt. 2)</a></li>
+            <li><a target="_blank" href="aula-16.html">Aula 16 (Slots)</a></li>
+            <li><a target="_blank" href="aula-17.html">Aula 17 (Mixins)</a></li>
         </ul>
     </div>
 </body>
