--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li><a target="_blank" href="aula-15.html">Aula 15 (Componentes, dados e informações pt. 2)</a></li>
             <li><a target="_blank" href="aula-16.html">Aula 16 (Slots)</a></li>
             <li><a target="_blank" href="aula-17.html">Aula 17 (Mixins)</a></li>
+            <li><a target="_blank" href="aula-18.html">Aula 18 (Ajax e vue-resource)</a></li>
         </ul>
     </div>
 </body>
