Aula 19 - Ajax e axios

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <li><a target="_blank" href="aula-16.html">Aula 16 (Slots)</a></li>
             <li><a target="_blank" href="aula-17.html">Aula 17 (Mixins)</a></li>
             <li><a target="_blank" href="aula-18.html">Aula 18 (Ajax e vue-resource)</a></li>
+            <li><a target="_blank" href="aula-19.html">Aula 19 (Ajax e axios)</a></li>
         </ul>
     </div>
 </body>
