--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a target="_blank" href="aula-17.html">Aula 17 (Mixins)</a></li>
             <li><a target="_blank" href="aula-18.html">Aula 18 (Ajax e vue-resource)</a></li>
             <li><a target="_blank" href="aula-19.html">Aula 19 (Ajax e axios)</a></li>
+            <li><a target="_blank" href="aula-20.html">Aula 20 (Key, Ref, Slot e Is)</a></li>
         </ul>
     </div>
 </body>
