--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li><a target="_blank" href="aula-18.html">Aula 18 (Ajax e vue-resource)</a></li>
             <li><a target="_blank" href="aula-19.html">Aula 19 (Ajax e axios)</a></li>
             <li><a target="_blank" href="aula-20.html">Aula 20 (Key, Ref, Slot e Is)</a></li>
+            <li><a target="_blank" href="aula-21.html">Aula 21 (Transições)</a></li>
         </ul>
     </div>
 </body>
