Aula 23 - History e rotas nomeadas

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li><a target="_blank" href="aula-20.html">Aula 20 (Key, Ref, Slot e Is)</a></li>
             <li><a target="_blank" href="aula-21.html">Aula 21 (Transições)</a></li>
             <li><a target="_blank" href="aula-22.html">Aula 22 (Rotas)</a></li>
+            <li><a target="_blank" href="aula-23.html">Aula 23 (History e rotas nomeadas)</a></li>
         </ul>
     </div>
 </body>
