--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li><a target="_blank" href="aula-21.html">Aula 21 (Transições)</a></li>
             <li><a target="_blank" href="aula-22.html">Aula 22 (Rotas)</a></li>
             <li><a target="_blank" href="aula-23.html">Aula 23 (History e rotas nomeadas)</a></li>
+            <li><a target="_blank" href="aula-24.html">Aula 24 (Subrotas e rotas com parâmetros)</a></li>
         </ul>
     </div>
 </body>
