Aula 26 - Redirecionamento e rota padrão

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <li><a target="_blank" href="aula-23.html">Aula 23 (History e rotas nomeadas)</a></li>
             <li><a target="_blank" href="aula-24.html">Aula 24 (Subrotas e rotas com parâmetros)</a></li>
             <li><a target="_blank" href="aula-25.html">Aula 25 (Navegação automática)</a></li>
+            <li><a target="_blank" href="aula-26.html">Aula 26 (Redirecionamento e rota padrão)</a></li>
         </ul>
     </div>
 </body>
