--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             <li><a target="_blank" href="aula-24.html">Aula 24 (Subrotas e rotas com parâmetros)</a></li>
             <li><a target="_blank" href="aula-25.html">Aula 25 (Navegação automática)</a></li>
             <li><a target="_blank" href="aula-26.html">Aula 26 (Redirecionamento e rota padrão)</a></li>
+            <li><a target="_blank" href="aula-27.html">Aula 27 (Rotas e parâmetros estáticos)</a></li>
         </ul>
     </div>
 </body>
