--- a/index.html
+++ b/index.html
@@ -12,37 +12,56 @@
 
 <body>
     <div class="container">
-        <h1>Curso Vue.js</h1>
-        <h2><a target="_blank" href="https://youtube.com/playlist?list=PLcoYAcR89n-qq1vGRbaUiV6Q9puy0qigW">Link para a playlist</a></h2>
+        <br> <hr>
+        <div class="row justify-content-end">
+            <div class="col-9">
+                <h1>Curso Vue.js</h1>
+            </div>
+            <div class="col-3">
+                <div class="alert alert-danger"><a target="_blank" href="https://youtube.com/playlist?list=PLcoYAcR89n-qq1vGRbaUiV6Q9puy0qigW"><center>Link para a playlist no YouTube</center></a></div>
+            </div>
+        </div>
+        <hr> 
         <h2>Exercícios:</h2>
-        <ul>
-            <li><a target="_blank" href="aula-01.html">Aula 01 (Introdução)</a></li>
-            <li><a target="_blank" href="aula-02-03.html">Aulas 02 e 03 (V-if e V-show)</a></li>
-            <li><a target="_blank" href="aula-04.html">Aula 04 (V-for)</a></li>
-            <li><a target="_blank" href="aula-05.html">Aula 05 (V-model)</a></li>
-            <li><a target="_blank" href="aula-06.html">Aula 06 (V-bind)</a></li>
-            <li><a target="_blank" href="aula-07.html">Aula 07 (V-bind)</a></li>
-            <li><a target="_blank" href="aula-08.html">Aula 08 (V-on)</a></li>
-            <li><a target="_blank" href="aula-09.html">Aula 09 (Filtros e manipulação de texto)</a></li>
-            <li><a target="_blank" href="aula-10.html">Aula 10 (Computed e Watch)</a></li>
-            <li><a target="_blank" href="aula-11.html">Aula 11 (Lifecycle hooks)</a></li>
-            <li><a target="_blank" href="aula-12.html">Aula 12 (Componentes reutilizáveis)</a></li>
-            <li><a target="_blank" href="aula-13.html">Aula 13 (Componentes pais e filhos)</a></li>
-            <li><a target="_blank" href="aula-14.html">Aula 14 (Componentes, dados e informações)</a></li>
-            <li><a target="_blank" href="aula-15.html">Aula 15 (Componentes, dados e informações pt. 2)</a></li>
-            <li><a target="_blank" href="aula-16.html">Aula 16 (Slots)</a></li>
-            <li><a target="_blank" href="aula-17.html">Aula 17 (Mixins)</a></li>
-            <li><a target="_blank" href="aula-18.html">Aula 18 (Ajax e vue-resource)</a></li>
-            <li><a target="_blank" href="aula-19.html">Aula 19 (Ajax e axios)</a></li>
-            <li><a target="_blank" href="aula-20.html">Aula 20 (Key, Ref, Slot e Is)</a></li>
-            <li><a target="_blank" href="aula-21.html">Aula 21 (Transições)</a></li>
-            <li><a target="_blank" href="aula-22.html">Aula 22 (Rotas)</a></li>
-            <li><a target="_blank" href="aula-23.html">Aula 23 (History e rotas nomeadas)</a></li>
-            <li><a target="_blank" href="aula-24.html">Aula 24 (Subrotas e rotas com parâmetros)</a></li>
-            <li><a target="_blank" href="aula-25.html">Aula 25 (Navegação automática)</a></li>
-            <li><a target="_blank" href="aula-26.html">Aula 26 (Redirecionamento e rota padrão)</a></li>
-            <li><a target="_blank" href="aula-27.html">Aula 27 (Rotas e parâmetros estáticos)</a></li>
-        </ul>
+        <div class="row">
+            <div class="col">
+                <ul class="list-group">
+                    <li class="list-group-item"><a target="_blank" href="aula-01.html"><b>Aula 01</b> (Introdução)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-02-03.html"><b>Aulas 02 e 03</b> (V-if e V-show)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-04.html"><b>Aula 04</b> (V-for)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-05.html"><b>Aula 05</b> (V-model)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-06.html"><b>Aula 06</b> (V-bind)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-07.html"><b>Aula 07</b> (V-bind)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-08.html"><b>Aula 08</b> (V-on)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-09.html"><b>Aula 09</b> (Filtros e manipulação de texto)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-10.html"><b>Aula 10</b> (Computed e Watch)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-11.html"><b>Aula 11</b> (Lifecycle hooks)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-12.html"><b>Aula 12</b> (Componentes reutilizáveis)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-13.html"><b>Aula 13</b> (Componentes pais e filhos)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-14.html"><b>Aula 14</b> (Componentes, dados e informações)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-15.html"><b>Aula 15</b> (Componentes, dados e informações pt. 2)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-16.html"><b>Aula 16</b> (Slots)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-17.html"><b>Aula 17</b> (Mixins)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-18.html"><b>Aula 18</b> (Ajax e vue-resource)</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <ul class="list-group">
+                    <li class="list-group-item"><a target="_blank" href="aula-18.html"><b>Aula 18</b> (Ajax e vue-resource)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-19.html"><b>Aula 19</b> (Ajax e axios)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-20.html"><b>Aula 20</b> (Key, Ref, Slot e Is)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-21.html"><b>Aula 21</b> (Transições)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-22.html"><b>Aula 22</b> (Rotas)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-23.html"><b>Aula 23</b> (History e rotas nomeadas)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-24.html"><b>Aula 24</b> (Subrotas e rotas com parâmetros)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-25.html"><b>Aula 25</b> (Navegação automática)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-26.html"><b>Aula 26</b> (Redirecionamento e rota padrão)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-27.html"><b>Aula 27</b> (Rotas e parâmetros estáticos)</a></li>
+                    <li class="list-group-item"><a target="_blank" href="aula-28.html"><b>Aula 28</b> (Vue CLI)</a></li>
+                </ul>
+            </div>
+        </div>
+        <br> <hr> <br>
     </div>
 </body>
 
