Iniciando projeto com CLI

--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@
                     <li class="list-group-item"><a target="_blank" href="before-cli/aula-25.html"><b>Aula 25</b> (Navegação automática)</a></li>
                     <li class="list-group-item"><a target="_blank" href="before-cli/aula-26.html"><b>Aula 26</b> (Redirecionamento e rota padrão)</a></li>
                     <li class="list-group-item"><a target="_blank" href="before-cli/aula-27.html"><b>Aula 27</b> (Rotas e parâmetros estáticos)</a></li>
-                    <li class="list-group-item"><a target="_blank" href="before-cli/aula-28.html"><b>Aula 28</b> (Vue CLI)</a></li>
+                    <li class="list-group-item">
+                        <a target="_blank" href="http://localhost:8080/#/"><b>Aula 28</b> (Projeto com CLI)</a>
+                        <br><br>
+                        <div class="alert alert-warning">Não se esqueça de botar pra rodar</div>
+                    </li>
                 </ul>
             </div>
         </div>
